--- a/font.css
+++ b/font.css
@@ -1,6 +1,6 @@
 <style>
 
-@import url('https: //fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 @font-face {
     font-family: "Rubik Mono One", monospace;
@@ -19,6 +19,10 @@ h1 {
 
 h5 {
     font-family: 'Rubik Mono One', monospace;
+}
+
+h4 {
+    font-family: 'Lora', system-ui;
 }
 
 p {
