--- a/font.css
+++ b/font.css
@@ -25,6 +25,9 @@ h4 {
     font-family: 'Lora', system-ui;
 }
 
+a {
+    font-family: 'Lora', system-ui;
+}
 p {
     font-family: 'Lato', sans-serif;
 }
